LPS-103629 Build Lang

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_da.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Cancel field changes? (Automatic Copy)
 cancel-without-saving=Annullere uden at gemme? (Automatic Translation)
 changeable-default-language-description=If checked, the default language of dynamic data mapping structures will be changeable. The default language of dynamic data mapping structures is inherited from the site settings. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script. To use the palette after changing the language, save first. (Automatic Copy)
-checkbox-field-type-description=Answer yes or no questions using a checkbox. (Automatic Copy)
+checkbox-field-type-description=Answer yes or no questions using a checkbox (Automatic Copy)
 checkbox-field-type-label=Boolean Question (Automatic Copy)
-checkbox-multiple-field-type-description=Select multiple options using a checkbox. (Automatic Copy)
+checkbox-multiple-field-type-description=Select multiple options using a checkbox (Automatic Copy)
 checkbox-multiple-field-type-label=Multiple Selection (Automatic Copy)
 choose-a-data-provider=Choose a Data Provider (Automatic Copy)
 choose-a-field-to-show-the-result=Choose a Field to Show the Result (Automatic Copy)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Data Provider's Output: (Automatic Copy)
 data-provider-parameter-output-description=Assign the data provider's parameters you want to a field and the information will autofill it automatically. (Automatic Copy)
 data-provider-timeout-message=Enter the time in milliseconds after which the rest service call will be aborted. Its minimum value is 1000 milliseconds. (Automatic Copy)
 data-providers=Data Providers (Automatic Copy)
-date-field-type-description=Select date from a Datepicker. (Automatic Copy)
+date-field-type-description=Select date from a Datepicker (Automatic Copy)
 date-field-type-label=Date (Automatic Copy)
 ddm-data-provider=Dynamic Data Mapping Data Provider (Automatic Copy)
 ddm-data-provider-configuration-name=Data Providers (Automatic Copy)
@@ -98,7 +98,7 @@ dismiss-operation=Dismiss Operation (Automatic Copy)
 displayed-json-attribute=Viste JSON attribut (Automatic Translation)
 displaying-form=Displaying Form (Automatic Copy)
 do=Do (Automatic Copy)
-document-library-field-type-description=Send files via Documents and Media. (Automatic Copy)
+document-library-field-type-description=Send files via Documents and Media (Automatic Copy)
 document-library-field-type-label=Upload (Automatic Copy)
 does-not-contain=Does not contain (Automatic Copy)
 does-not-match=Does not match (Automatic Copy)
@@ -149,7 +149,7 @@ forms=Forms (Automatic Copy)
 from-autofill=From Autofill (Automatic Copy)
 from-data-provider=From Data Provider (Automatic Copy)
 ftl[stands-for]=FreeMarker (Automatic Copy)
-grid-field-type-description=Select options from a matrix. (Automatic Copy)
+grid-field-type-description=Select options from a matrix (Automatic Copy)
 grid-field-type-label=Grid (Automatic Copy)
 help-text=Hjælp-tekst (Automatic Translation)
 if=If (Automatic Copy)
@@ -204,7 +204,7 @@ no-forms-were-found=No forms were found. (Automatic Copy)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Number (Automatic Copy)
-numeric-field-type-description=It accepts only numbers. (Automatic Copy)
+numeric-field-type-description=It accepts only numbers (Automatic Copy)
 numeric-field-type-label=Numeric (Automatic Copy)
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode. (Automatic Copy)
 option=Option (Automatic Copy)
@@ -212,7 +212,7 @@ options-field-type-label=Options (Automatic Copy)
 or=OR (Automatic Copy)
 other-field=Other field (Automatic Copy)
 output-parameters=Output Parameters (Automatic Copy)
-paragraph-field-type-description=Add a title and/or a body text in your form. (Automatic Copy)
+paragraph-field-type-description=Add a title and/or a body text in your form (Automatic Copy)
 paragraph-field-type-label=Paragraph (Automatic Copy)
 parameter=Parameter (Automatic Copy)
 parent-x=Parent {0} (Automatic Copy)
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Angiv Brugernavn t
 publish-form=Publicer formularen (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Publish the form to get its shareable link. (Automatic Copy)
 publish-this-form=Publish this form. (Automatic Copy)
-radio-field-type-description=Select only one item with a radio button. (Automatic Copy)
+radio-field-type-description=Select only one item with a radio button (Automatic Copy)
 radio-field-type-label=Single Selection (Automatic Copy)
 regular-expression=Regular expression (Automatic Copy)
 remove-field=Remove Field (Automatic Copy)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Besparelse (Automatic Translation)
 script-file=Script File (Automatic Copy)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application. (Automatic Copy)
-select-field-type-description=Choose one or more options from a list. (Automatic Copy)
+select-field-type-description=Choose one or more options from a list (Automatic Copy)
 select-field-type-label=Select from List (Automatic Copy)
 select-form=Select Form (Automatic Copy)
+separator-field-type-description=Add a line to organize your information (Automatic Copy)
+separator-field-type-label=Separator (Automatic Copy)
 show-as-a-switcher=Vis som en skifter (Automatic Translation)
 show-error-message=Show Error Message (Automatic Copy)
 show-more-options=Vis flere muligheder (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Stay (Automatic Copy)
 storage-type=Storage Type (Automatic Copy)
 stored-json-attribute=Lagrede JSON attribut (Automatic Translation)
 structure-help=Select a structure to create a template for that structure or leave this field blank to create a generic template that can be embedded in other templates. (Automatic Copy)
+style=Style (Automatic Copy)
 submit-form=Submit (Automatic Copy)
 success-page=Success Page (Automatic Copy)
 sum_function=Sum (Automatic Copy)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Switch Pagination to Bottom (Automatic Copy)
 switch-pagination-to-top=Switch Pagination to Top (Automatic Copy)
 template-key-help=The template key can be used to include this template programatically in another template. (Automatic Copy)
 templates-for-structure-x=Skabeloner for struktur: {0}
-text-field-type-description=Single line or multiline text area. (Automatic Copy)
+text-field-type-description=Single line or multiline text area (Automatic Copy)
 text-field-type-label=Text Field (Automatic Copy)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=The autosave interval must be greater than or equal to 0. (Automatic Copy)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=The data provider cannot be deleted because it is required by one or more forms. (Automatic Copy)
