--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Anuluj zmiany pola? (Automatic Translation)
 cancel-without-saving=Anulować bez zapisywania? (Automatic Translation)
 changeable-default-language-description=Jeśli zaznaczone, domyślny język dane dynamiczne mapowanie struktur będzie zmienne. Domyślny język struktur dynamicznych danych mapowania jest odziedziczone ustawienia witryny. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Zmiana języka nie przetłumaczy automatycznie bieżącego szablonu. Aby używać palety po zmianie języka, zapisz zmiany.
-checkbox-field-type-description=Odpowiedzi na pytania tak lub nie, za pomocą pola wyboru. (Automatic Translation)
+checkbox-field-type-description=Odpowiedz twierdząco lub bez pytań za pomocą pola wyboru (Automatic Translation)
 checkbox-field-type-label=Pytanie typu Boolean (Automatic Translation)
-checkbox-multiple-field-type-description=Wybierać spośród wielu opcji za pomocą checkbox. (Automatic Translation)
+checkbox-multiple-field-type-description=Zaznaczanie wielu opcji za pomocą pola wyboru (Automatic Translation)
 checkbox-multiple-field-type-label=Wybór wielokrotny (Automatic Translation)
 choose-a-data-provider=Wybierz dostawca danych (Automatic Translation)
 choose-a-field-to-show-the-result=Wybierz pole, aby wyświetlić wynik (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Dostawca danych wyjściowych: (Automatic Translat
 data-provider-parameter-output-description=Przypisz parametry dostawcy danych chcesz do pola i dane autouzupełniania będzie go automatycznie. (Automatic Translation)
 data-provider-timeout-message=Wprowadź czas, w milisekundach, po których zostanie przerwane wywołania usługa rest. Wartość minimalna jest 1000 milisekund. (Automatic Translation)
 data-providers=Dostawców danych (Automatic Translation)
-date-field-type-description=Wybierz datę z Datepicker. (Automatic Translation)
+date-field-type-description=Wybierz datę z DatePicker (Automatic Translation)
 date-field-type-label=Data (Automatic Translation)
 ddm-data-provider=Dostawca danych mapowania danych dynamicznych (Automatic Translation)
 ddm-data-provider-configuration-name=Dostawcy danych (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Odrzucić operacji (Automatic Translation)
 displayed-json-attribute=Atrybut wyświetlane JSON (Automatic Translation)
 displaying-form=Wyświetlanie formularza (Automatic Translation)
 do=Zrobić (Automatic Translation)
-document-library-field-type-description=Wysyłanie plików za pośrednictwem dokumentów i nośników. (Automatic Translation)
+document-library-field-type-description=Wysyłanie plików za pomocą dokumentów i multimediów (Automatic Translation)
 document-library-field-type-label=Upload (Automatic Translation)
 does-not-contain=Nie zawiera (Automatic Translation)
 does-not-match=Nie pasuje (Automatic Translation)
@@ -149,7 +149,7 @@ forms=Formy (Automatic Translation)
 from-autofill=Z funkcji autouzupełniania (Automatic Translation)
 from-data-provider=Od dostawcy danych (Automatic Translation)
 ftl[stands-for]=FreeMarker
-grid-field-type-description=Wybierz opcje z macierzy. (Automatic Translation)
+grid-field-type-description=Wybieranie opcji z macierzy (Automatic Translation)
 grid-field-type-label=Siatki (Automatic Translation)
 help-text=Tekst pomocy (Automatic Translation)
 if=Jeśli (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=Stwierdzono nie formy. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Numer (Automatic Translation)
-numeric-field-type-description=Przyjmuje tylko liczby. (Automatic Translation)
+numeric-field-type-description=Akceptuje tylko cyfry (Automatic Translation)
 numeric-field-type-label=Numeryczne (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Pozwala na usunięcie tylko wybranych pól w trybie edycji.
 option=Opcja (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Opcje (Automatic Translation)
 or=LUB (Automatic Translation)
 other-field=Inne pola (Automatic Translation)
 output-parameters=Parametry wyjściowe (Automatic Translation)
-paragraph-field-type-description=Dodaj tytuł lub tekst podstawowy w formularzu. (Automatic Translation)
+paragraph-field-type-description=Dodawanie tytułu i/lub tekstu treści w formularzu (Automatic Translation)
 paragraph-field-type-label=Ust. (Automatic Translation)
 parameter=Parametr (Automatic Translation)
 parent-x=Nadrzędny {0}
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Podać nazwę uży
 publish-form=Publikuj formularz (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Opublikować formularz, aby otrzymać link do jego udostępniania. (Automatic Translation)
 publish-this-form=Opublikować formularz. (Automatic Translation)
-radio-field-type-description=Wybrać tylko jeden element z przycisk radiowy. (Automatic Translation)
+radio-field-type-description=Zaznaczanie tylko jednego elementu za pomocą przycisku radiowego (Automatic Translation)
 radio-field-type-label=Pojedynczy wybór (Automatic Translation)
 regular-expression=Wyrażenie regularne (Automatic Translation)
 remove-field=Usuń pole (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Oszczędności (Automatic Translation)
 script-file=Plik skryptu
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Wybierz istniejącego formularza lub Dodawanie formularza mają być wyświetlane w tej aplikacji. (Automatic Translation)
-select-field-type-description=Wybierz jedną lub więcej opcji z listy. (Automatic Translation)
+select-field-type-description=Wybierz jedną lub więcej opcji z listy (Automatic Translation)
 select-field-type-label=Wybierz z listy (Automatic Translation)
 select-form=Wybierz formularz (Automatic Translation)
+separator-field-type-description=Dodawanie linii do organizowania informacji (Automatic Translation)
+separator-field-type-label=Separator (Automatic Translation)
 show-as-a-switcher=Pokaż jako Switcher (Automatic Translation)
 show-error-message=Pokaż komunikat o błędzie (Automatic Translation)
 show-more-options=Pokaż więcej opcji (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Zatrzymać w (Automatic Translation)
 storage-type=Typ przechowywania
 stored-json-attribute=Atrybutu przechowywane JSON (Automatic Translation)
 structure-help=Wskaż strukturę, z której powstanie szablon dla tej struktury, lub pozostaw pole puste, by utworzyć ogólny wzorzec, który będzie można osadzać w innych szablonach.
+style=Stylu (Automatic Translation)
 submit-form=Wyślij
 success-page=Stronę sukcesu (Automatic Translation)
 sum_function=Suma (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Paginacja przełącznik do dołu (Automatic Translat
 switch-pagination-to-top=Paginacja przełącznik do góry (Automatic Translation)
 template-key-help=Klucz szablonu może być użyty do programowego dołączania tego szablonu w innym szablonie.
 templates-for-structure-x=Szablony dla struktury {0}
-text-field-type-description=Pojedynczy wiersz lub obszar tekstu wielowierszowego. (Automatic Translation)
+text-field-type-description=Pojedynczy wiersz lub obszar tekstu wielowierszowego (Automatic Translation)
 text-field-type-label=Pole tekstowe (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=Interwał Autozapisu musi być większa lub równa 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Dostawca danych nie można usunąć, ponieważ jest to wymagane przez jeden lub więcej formularzy. (Automatic Translation)
