--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=取消欄位的更改嗎？ (Automatic Translation
 cancel-without-saving=取消不保存嗎? (Automatic Translation)
 changeable-default-language-description=如果選中此選項，動態資料映射結構的預設語言將被改變。動態資料映射結構的預設語言是從網站設置繼承的。 (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=改變語系不會自動翻譯已存在版型Script。在改變語系後使用色盤，先儲存它。
-checkbox-field-type-description=使用核取方塊回答 "是" 或 "否" 問題。 (Automatic Translation)
+checkbox-field-type-description=使用核取方塊回答"是"或"否"問題 (Automatic Translation)
 checkbox-field-type-label=布林問題 (Automatic Translation)
-checkbox-multiple-field-type-description=使用核取方塊選擇多個選項。 (Automatic Translation)
+checkbox-multiple-field-type-description=使用核取方塊選擇多個選項 (Automatic Translation)
 checkbox-multiple-field-type-label=多個選擇 (Automatic Translation)
 choose-a-data-provider=選擇一個資料提供程式 (Automatic Translation)
 choose-a-field-to-show-the-result=選擇一個欄位以顯示結果 (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=資料提供程式的輸出︰ (Automatic Transla
 data-provider-parameter-output-description=指定資料提供程式的參數要向外地和資訊將自動填滿它自動。 (Automatic Translation)
 data-provider-timeout-message=輸入將中止 rest 服務調用的時間 (以毫秒為單位)。其最小值為1000毫秒。 (Automatic Translation)
 data-providers=資料提供程式 (Automatic Translation)
-date-field-type-description=從 Datepicker 中選擇日期。 (Automatic Translation)
+date-field-type-description=從日期選擇器中選擇日期 (Automatic Translation)
 date-field-type-label=日期 (Automatic Translation)
 ddm-data-provider=動態資料映射資料提供程式 (Automatic Translation)
 ddm-data-provider-configuration-name=資料提供程式 (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=消除操作 (Automatic Translation)
 displayed-json-attribute=顯示的 JSON 屬性 (Automatic Translation)
 displaying-form=顯示表單
 do=做 (Automatic Translation)
-document-library-field-type-description=通過文檔和媒體發送檔。 (Automatic Translation)
+document-library-field-type-description=通過文檔和媒體發送檔 (Automatic Translation)
 document-library-field-type-label=上傳 (Automatic Translation)
 does-not-contain=不包含 (Automatic Translation)
 does-not-match=不匹配 (Automatic Translation)
@@ -149,7 +149,7 @@ forms=表單
 from-autofill=從自動填滿 (Automatic Translation)
 from-data-provider=從資料提供程式 (Automatic Translation)
 ftl[stands-for]=FreeMarker
-grid-field-type-description=從矩陣中選擇選項。 (Automatic Translation)
+grid-field-type-description=從矩陣中選擇選項 (Automatic Translation)
 grid-field-type-label=網 格 (Automatic Translation)
 help-text=説明文本 (Automatic Translation)
 if=如果 (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=找不到表單。
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=數量 (Automatic Translation)
-numeric-field-type-description=它只接受數位。 (Automatic Translation)
+numeric-field-type-description=它僅接受數位 (Automatic Translation)
 numeric-field-type-label=數位 (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=只允許在編輯模式刪除必須的欄位。
 option=選項 (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=選項 (Automatic Translation)
 or=或 (Automatic Translation)
 other-field=其他欄位 (Automatic Translation)
 output-parameters=輸出參數 (Automatic Translation)
-paragraph-field-type-description=在表單中添加標題和/或正文文本。 (Automatic Translation)
+paragraph-field-type-description=在表單中添加標題和/或正文文本 (Automatic Translation)
 paragraph-field-type-label=段 (Automatic Translation)
 parameter=參數 (Automatic Translation)
 parent-x=上層 {0}
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=提供向其他提
 publish-form=將表單發佈 (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=發佈表單，以獲得其可共用的連結。 (Automatic Translation)
 publish-this-form=發佈此表單。 (Automatic Translation)
-radio-field-type-description=只選擇一個帶有選項按鈕的專案。 (Automatic Translation)
+radio-field-type-description=僅選擇一個帶有選項按鈕的專案 (Automatic Translation)
 radio-field-type-label=單一選擇 (Automatic Translation)
 regular-expression=正則運算式 (Automatic Translation)
 remove-field=刪除欄位 (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=保存 (Automatic Translation)
 script-file=Script 檔案
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=選擇一個已存在表單或增加一個表單以在這應用程式中顯示。
-select-field-type-description=從清單中選擇一個或多個選項。 (Automatic Translation)
+select-field-type-description=從清單中選擇一個或多個選項 (Automatic Translation)
 select-field-type-label=從清單中選擇 (Automatic Translation)
 select-form=選擇表單
+separator-field-type-description=添加行以組織資訊 (Automatic Translation)
+separator-field-type-label=分離 (Automatic Translation)
 show-as-a-switcher=顯示為切換器 (Automatic Translation)
 show-error-message=顯示錯誤資訊 (Automatic Translation)
 show-more-options=顯示更多選項 (Automatic Translation)
@@ -275,6 +277,7 @@ stay=住宿 (Automatic Translation)
 storage-type=儲存類型
 stored-json-attribute=存儲的 JSON 屬性 (Automatic Translation)
 structure-help=選擇一個結構為該結構創建一個版型或留下欄位空白以創建在其他版型嵌入的一般版型。
+style=風格 (Automatic Translation)
 submit-form=送出
 success-page=成功頁 (Automatic Translation)
 sum_function=總和 (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=將分頁切換到底部 (Automatic Translation)
 switch-pagination-to-top=將分頁切換到頂部 (Automatic Translation)
 template-key-help=版型鍵值能使用以程式化在其他版型包含版型。
 templates-for-structure-x=版型為結構：{0}
-text-field-type-description=單行或多行文本區域。 (Automatic Translation)
+text-field-type-description=單行或多行文本區域 (Automatic Translation)
 text-field-type-label=文字欄位 (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=自動儲存間隔必須大於或等於0。 (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=資料提供程式不能刪除，因為它必需的一個或多個表單。 (Automatic Translation)
