--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Zrušit změny pole? (Automatic Translation)
 cancel-without-saving=Zrušit bez uložení? (Automatic Translation)
 changeable-default-language-description=Je-li zaškrtnuto, bude výchozí jazyk dynamická data mapování struktur proměnlivé. Výchozí jazyk mapování dynamických datových struktur je zděděno z nastavení webu. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Změna jazyka není automaticky přeložit stávající skript šablony. Chcete-li použít paletu po změně jazyka, uložit první. (Automatic Translation)
-checkbox-field-type-description=Odpovězte ano / ne otázky pomocí zaškrtávacího políčka. (Automatic Translation)
+checkbox-field-type-description=Odpovědět ano nebo žádné otázky pomocí zaškrtávacího políčka (Automatic Translation)
 checkbox-field-type-label=Logická otázka (Automatic Translation)
-checkbox-multiple-field-type-description=Výběr více možností pomocí zaškrtávacího políčka. (Automatic Translation)
+checkbox-multiple-field-type-description=Výběr více možností pomocí zaškrtávacího políčka (Automatic Translation)
 checkbox-multiple-field-type-label=Vícenásobný výběr (Automatic Translation)
 choose-a-data-provider=Vyberte zprostředkovatele dat (Automatic Translation)
 choose-a-field-to-show-the-result=Zvolte pole, které chcete zobrazit výsledek (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Zprostředkovatel dat výstup: (Automatic Transla
 data-provider-parameter-output-description=Přiřadit zprostředkovatele dat parametrů chcete pole a vyplňování informací se to automaticky. (Automatic Translation)
 data-provider-timeout-message=Zadejte čas v milisekundách, po které bude přerušena volání služby rest. Jeho minimální hodnota je 1000 milisekund. (Automatic Translation)
 data-providers=Zprostředkovatelé dat (Automatic Translation)
-date-field-type-description=Vyberte datum Datepicker. (Automatic Translation)
+date-field-type-description=Vybrat datum z DatePicker (Automatic Translation)
 date-field-type-label=Datum (Automatic Translation)
 ddm-data-provider=Dynamická Data mapování dat zprostředkovatele (Automatic Translation)
 ddm-data-provider-configuration-name=Zprostředkovatelé dat (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Zrušit operaci (Automatic Translation)
 displayed-json-attribute=Zobrazené JSON atribut (Automatic Translation)
 displaying-form=Zobrazení formuláře (Automatic Translation)
 do=Atrakce (Automatic Translation)
-document-library-field-type-description=Posílejte soubory přes dokumenty a média. (Automatic Translation)
+document-library-field-type-description=Odeslání souborů pomocí dokumentů a médií (Automatic Translation)
 document-library-field-type-label=Odeslat (Automatic Translation)
 does-not-contain=Neobsahuje žádné (Automatic Translation)
 does-not-match=Se neshoduje (Automatic Translation)
@@ -149,7 +149,7 @@ forms=Formuláře (Automatic Translation)
 from-autofill=Od Automatické vyplňování (Automatic Translation)
 from-data-provider=Od poskytovatele dat (Automatic Translation)
 ftl[stands-for]=FreeMarker
-grid-field-type-description=Vyberte možnosti z matice. (Automatic Translation)
+grid-field-type-description=Vybrat možnosti z matice (Automatic Translation)
 grid-field-type-label=Mřížka (Automatic Translation)
 help-text=Text nápovědy (Automatic Translation)
 if=Pokud (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Možnosti (Automatic Translation)
 or=NEBO (Automatic Translation)
 other-field=Další pole (Automatic Translation)
 output-parameters=Výstupní parametry (Automatic Translation)
-paragraph-field-type-description=Přidejte nadpis nebo základní text ve formuláři. (Automatic Translation)
+paragraph-field-type-description=Přidání nadpisu nebo základního textu do formuláře (Automatic Translation)
 paragraph-field-type-label=Odstavec (Automatic Translation)
 parameter=Parametr (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Zadejte uživatels
 publish-form=Publikovat formulář (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Publikujte formulář získat jeho odkazu ke sdílení. (Automatic Translation)
 publish-this-form=Umožňuje publikujte tento formulář. (Automatic Translation)
-radio-field-type-description=Vyberte pouze jednu položku s přepínací tlačítko. (Automatic Translation)
+radio-field-type-description=Výběr pouze jedné položky pomocí přepínače (Automatic Translation)
 radio-field-type-label=Jeden výběr (Automatic Translation)
 regular-expression=Regulární výraz (Automatic Translation)
 remove-field=Odstranit pole (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Ukládání (Automatic Translation)
 script-file=Soubor se skriptem
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Vyberte existující formulář nebo přidat formulář, který se má zobrazit v této aplikaci. (Automatic Translation)
-select-field-type-description=Vyberte jednu nebo více možností ze seznamu. (Automatic Translation)
+select-field-type-description=Výběr jedné nebo více možností ze seznamu (Automatic Translation)
 select-field-type-label=Vyberte ze seznamu (Automatic Translation)
 select-form=Vybrat formulář (Automatic Translation)
+separator-field-type-description=Přidání řádku k uspořádání informací (Automatic Translation)
+separator-field-type-label=Oddělovač (Automatic Translation)
 show-as-a-switcher=Zobrazit jako přepínač (Automatic Translation)
 show-error-message=Zobrazit chybová zpráva (Automatic Translation)
 show-more-options=Zobrazit další možnosti (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Zůstat (Automatic Translation)
 storage-type=Typ úložiště
 stored-json-attribute=Uložené JSON atribut (Automatic Translation)
 structure-help=Vyberte strukturu pro vytvoření šablony pro tuto strukturu nebo ponechte toto pole prázdné pro vytvoření obecné šablony, která může být vložena do jiných šablon.
+style=Styl (Automatic Translation)
 submit-form=Odešli
 success-page=Stránka (Automatic Translation)
 sum_function=Součet (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Přepněte stránkování dolů (Automatic Translati
 switch-pagination-to-top=Přepněte stránkování nahoru (Automatic Translation)
 template-key-help=Klíč šablony může být použit k programovému začlenění této šablony do jiné.
 templates-for-structure-x=Šablony struktury {0}
-text-field-type-description=Jednom nebo víceřádkové textové oblasti. (Automatic Translation)
+text-field-type-description=Jedna řádková nebo víceřádková textová oblast (Automatic Translation)
 text-field-type-label=Textové pole (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=Interval automatického ukládání musí být větší nebo rovna 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Zprostředkovatel dat nelze odstranit, protože to vyžaduje jeden nebo více formulářů. (Automatic Translation)
