--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Välja muudatused tühistada? (Automatic Translati
 cancel-without-saving=Tühistamiseks ilma salvestamata? (Automatic Translation)
 changeable-default-language-description=Sisselülitamisel dünaamilised andmestruktuurid kaardistamise vaikekeele muudetavad. Dünaamilised andmestruktuurid kaardistamise vaikekeele pärineb saidi sätted. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Keele muutmine tõlkida automaatselt olemasoleva malli skript. Kasutada palett pärast Salvesta esimese keele muutmist. (Automatic Translation)
-checkbox-field-type-description=Küsimustele Jah või ei abil märkeruut. (Automatic Translation)
+checkbox-field-type-description=Vastake Jah või ei küsimusi märkeruutu abil (Automatic Translation)
 checkbox-field-type-label=Boolean küsimus (Automatic Translation)
-checkbox-multiple-field-type-description=Valige märkeruut kasutades mitmeid võimalusi. (Automatic Translation)
+checkbox-multiple-field-type-description=Mitme suvandi valimine märkeruutu abil (Automatic Translation)
 checkbox-multiple-field-type-label=Mitu valikut (Automatic Translation)
 choose-a-data-provider=Valige andmete pakkuja (Automatic Translation)
 choose-a-field-to-show-the-result=Valige väli, kust tulemuste kuvamine (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Andmete pakkuja väljund: (Automatic Translation)
 data-provider-parameter-output-description=Andmete pakkuja parameetreid määrata soovite välja ja Automaattäite teabe will see automaatselt. (Automatic Translation)
 data-provider-timeout-message=Sisestage aeg millisekundites, mille järel ülejäänud teenus kõne katkestatakse. Selle on vähemalt 1000 millisekundit. (Automatic Translation)
 data-providers=Andmete esitajatele (Automatic Translation)
-date-field-type-description=Valige kuupäev on Datepicker. (Automatic Translation)
+date-field-type-description=Kuupäeva valimine Datevalija kaudu (Automatic Translation)
 date-field-type-label=Kuupäev (Automatic Translation)
 ddm-data-provider=Dünaamilise kaardistamise andmepakkuja (Automatic Translation)
 ddm-data-provider-configuration-name=Andmete pakkujad (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Loobumistoiming (Automatic Translation)
 displayed-json-attribute=Kuvatud JSON atribuut (Automatic Translation)
 displaying-form=Väljapanek vorm (Automatic Translation)
 do=Ärge (Automatic Translation)
-document-library-field-type-description=Saata faile, dokumente ja meedia kaudu. (Automatic Translation)
+document-library-field-type-description=Failide saatmine dokumentide ja meediumite kaudu (Automatic Translation)
 document-library-field-type-label=Lisamise kuupäev (Automatic Translation)
 does-not-contain=Ei sisalda (Automatic Translation)
 does-not-match=Ei sobi (Automatic Translation)
@@ -149,7 +149,7 @@ forms=Vormid (Automatic Translation)
 from-autofill=Automaatne täitmine: (Automatic Translation)
 from-data-provider=Andmete pakkuja (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
-grid-field-type-description=Valige suvandid maatriksi. (Automatic Translation)
+grid-field-type-description=Maatriksi suvandite valimine (Automatic Translation)
 grid-field-type-label=Grid (Automatic Translation)
 help-text=Abiteksti (Automatic Translation)
 if=Kui (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=Ole ei leitud. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Number (Automatic Translation)
-numeric-field-type-description=See aktsepteerib ainult numbreid. (Automatic Translation)
+numeric-field-type-description=See aktsepteerib ainult numbreid (Automatic Translation)
 numeric-field-type-label=Numbriline (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Luba ainult kustutada välju redigeerimisrežiimist. (Automatic Translation)
 option=Valik (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Valikud (Automatic Translation)
 or=VÕI (Automatic Translation)
 other-field=Muu välja (Automatic Translation)
 output-parameters=Väljundite parameetrite (Automatic Translation)
-paragraph-field-type-description=Lisa pealkiri ja/või keha teksti vormi. (Automatic Translation)
+paragraph-field-type-description=Vormi pealkirja ja/või kehateksti lisamine (Automatic Translation)
 paragraph-field-type-label=Lõikes (Automatic Translation)
 parameter=Parameeter (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Anda kasutajanimi 
 publish-form=Vormi avaldamine (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Saada oma jagatav link vormi avaldada. (Automatic Translation)
 publish-this-form=Vormi avaldamiseks. (Automatic Translation)
-radio-field-type-description=Valige ainult üks üksus raadionuppu. (Automatic Translation)
+radio-field-type-description=Valige ainult üks raadionupu üksus (Automatic Translation)
 radio-field-type-label=Standard valik (Automatic Translation)
 regular-expression=Regulaarne avaldis (Automatic Translation)
 remove-field=Eemalda väli (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvestamine (Automatic Translation)
 script-file=Skriptifaili (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Valige olemasolev vorm või kuvada selle rakenduse lisamine. (Automatic Translation)
-select-field-type-description=Valige loendist üks või mitu suvandit. (Automatic Translation)
+select-field-type-description=Valige loendist üks või mitu suvandit (Automatic Translation)
 select-field-type-label=Valige loendist (Automatic Translation)
 select-form=Valige vorm (Automatic Translation)
+separator-field-type-description=Teabe korraldamiseks rea lisamine (Automatic Translation)
+separator-field-type-label=Eraldaja (Automatic Translation)
 show-as-a-switcher=Kuva nagu on vahetaja (Automatic Translation)
 show-error-message=Näita tõrketeade (Automatic Translation)
 show-more-options=Rohkem suvandeid (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Hinnast (Automatic Translation)
 storage-type=Mälu tüüp (Automatic Translation)
 stored-json-attribute=Salvestatud JSON atribuut (Automatic Translation)
 structure-help=Valige struktuuri loomiseks malli see struktuur või jätke see väli tühjaks, üldine malli, mis saab manustada muude mallide loomine. (Automatic Translation)
+style=Stiilis (Automatic Translation)
 submit-form=Esita
 success-page=Edu lehe (Automatic Translation)
 sum_function=Summa (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Lüliti lehekülgjaotuse alla (Automatic Translation
 switch-pagination-to-top=Aktiveerige Top sisendfailidest (Automatic Translation)
 template-key-help=Malli võti saab lisada see mall programatically teise malli. (Automatic Translation)
 templates-for-structure-x=Templates for Structure: {0} (Automatic Copy)
-text-field-type-description=Ühel või mitmerealise teksti ala. (Automatic Translation)
+text-field-type-description=Üksik-või mitmerealise teksti ala (Automatic Translation)
 text-field-type-label=Tekstiväli (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=Automaatse salvestamise intervall peab olema vähemalt 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Andmepakkuja ei saa kustutada, kuna see nõuab ühe või mitme vormiga. (Automatic Translation)
