--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Annullare le modifiche di campo? (Automatic Transl
 cancel-without-saving=Elimina senza salvare ?
 changeable-default-language-description=Se selezionato, la lingua predefinita dei contenuti web sarà modificabile. La lingua predefinita dei contenuti web viene ereditata dalle impostazioni sito.
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Cambiando la lingua il modello esistente non sarà automaticamente tradotto. E' necessario salvare prima di cambiare le scelte dopo aver cambiato la lingua.
-checkbox-field-type-description=Rispondere Sì o no alle domande utilizzando una casella di controllo. (Automatic Translation)
+checkbox-field-type-description=Rispondere a domande sì o no utilizzando una casella di controllo (Automatic Translation)
 checkbox-field-type-label=Domanda booleano (Automatic Translation)
-checkbox-multiple-field-type-description=Selezionare più opzioni utilizzando una casella di controllo. (Automatic Translation)
+checkbox-multiple-field-type-description=Selezionare più opzioni utilizzando una casella di controllo (Automatic Translation)
 checkbox-multiple-field-type-label=Selezione multipla (Automatic Translation)
 choose-a-data-provider=Scegli un provider dati
 choose-a-field-to-show-the-result=Scegliere un campo per visualizzare il risultato (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Output di Provider di dati: (Automatic Translatio
 data-provider-parameter-output-description=Assegnare i parametri del provider di dati si desidera a un campo e il riempimento automatico di informazioni sarà automaticamente. (Automatic Translation)
 data-provider-timeout-message=Inserisci il tempo in millisecondi dopo che la chiamata di servizio del resto verrà interrotta. Il valore minimo è 1000 millisecondi. (Automatic Translation)
 data-providers=Provider di dati (Automatic Translation)
-date-field-type-description=Selezionare data da un controllo Datepicker. (Automatic Translation)
+date-field-type-description=Selezionare la data da un controllo Selezione data (Automatic Translation)
 date-field-type-label=Data (Automatic Translation)
 ddm-data-provider=Provider Mappatura Dati Dinamici
 ddm-data-provider-configuration-name=Provider di dati (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Allontanare il funzionamento (Automatic Translation)
 displayed-json-attribute=Attributo JSON Visualizzato
 displaying-form=Visualizzazione Form
 do=Fare (Automatic Translation)
-document-library-field-type-description=Invia file mediante Documenti e Media.
+document-library-field-type-description=Inviare file tramite documenti e file multimediali (Automatic Translation)
 document-library-field-type-label=Caricare (Automatic Translation)
 does-not-contain=Non contiene
 does-not-match=Non corrisponde
@@ -149,7 +149,7 @@ forms=Form
 from-autofill=Da riempimento automatico
 from-data-provider=Dal provider dati
 ftl[stands-for]=FreeMarker
-grid-field-type-description=Selezionare le opzioni da una matrice. (Automatic Translation)
+grid-field-type-description=Selezionare le opzioni da una matrice (Automatic Translation)
 grid-field-type-label=Griglia (Automatic Translation)
 help-text=Testo di Aiuto
 if=Se (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=Nessona form trovata.
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=Nessun {0} trovato.
 number-placeholder=Numero (Automatic Translation)
-numeric-field-type-description=Accetta solo numeri. (Automatic Translation)
+numeric-field-type-description=Accetta solo numeri (Automatic Translation)
 numeric-field-type-label=Numerico (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Consenti solo la cancellazione dei campi in modalità modifica.
 option=Opzione (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Opzioni (Automatic Translation)
 or=OR (Automatic Translation)
 other-field=Altro campo (Automatic Translation)
 output-parameters=Parametri di output (Automatic Translation)
-paragraph-field-type-description=Aggiungere un titolo e/o un corpo del testo nel modulo. (Automatic Translation)
+paragraph-field-type-description=Aggiungere un titolo e/o un corpo del testo nel modulo (Automatic Translation)
 paragraph-field-type-label=Paragrafo (Automatic Translation)
 parameter=Parametro (Automatic Translation)
 parent-x=Padre {0}
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Inserisci un nome 
 publish-form=Pubblica Modulo
 publish-the-form-to-get-its-shareable-link=Pubblicare il modulo per ottenere il relativo collegamento condivisibile. (Automatic Translation)
 publish-this-form=Pubblicare questo modulo. (Automatic Translation)
-radio-field-type-description=Selezionare un solo elemento con un pulsante di opzione. (Automatic Translation)
+radio-field-type-description=Selezionare un solo elemento con un pulsante di opzione (Automatic Translation)
 radio-field-type-label=Selezione singola (Automatic Translation)
 regular-expression=Espressione regolare (Automatic Translation)
 remove-field=Rimuovere il campo (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Salvato &#149; {0}
 saving=Salvataggio in corso
 script-file=File Script
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleziona un form esistente o aggiungi un form da visualizzare in questa applicazione.
-select-field-type-description=Scegliere una o più opzioni da un elenco. (Automatic Translation)
+select-field-type-description=Scegliere una o più opzioni da un elenco (Automatic Translation)
 select-field-type-label=Selezionare dall'elenco (Automatic Translation)
 select-form=Seleziona Form
+separator-field-type-description=Aggiungere una riga per organizzare le informazioni (Automatic Translation)
+separator-field-type-label=Separatore (Automatic Translation)
 show-as-a-switcher=Visualizza come Switcher (Automatic Translation)
 show-error-message=Visualizza il messaggio di errore (Automatic Translation)
 show-more-options=Visualizza Ulteriori Opzioni
@@ -275,6 +277,7 @@ stay=Soggiorno (Automatic Translation)
 storage-type=Tipo Storage
 stored-json-attribute=Attributo JSON Memorizzato
 structure-help=Seleziona una struttura per creare un modello per questa struttura o lasci bianco questo campo per creare un modello generico che può essere inserito in altri modelli.
+style=stile m (Automatic Translation)
 submit-form=Invia
 success-page=Pagina di successo (Automatic Translation)
 sum_function=Somma (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Impaginazione di interruttore verso il basso (Automa
 switch-pagination-to-top=Impaginazione di interruttore verso l'alto (Automatic Translation)
 template-key-help=La chiave modello può essere usata per includere questo modello programmaticamente in un altro modello.
 templates-for-structure-x=Modello per la Struttura: {0}
-text-field-type-description=Singola linea o area di testo su più righe. (Automatic Translation)
+text-field-type-description=Area di testo a riga singola o multilinea (Automatic Translation)
 text-field-type-label=Campo di testo (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=L'intervallo di salvataggio automatico deve essere maggiore o uguale a 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Il provider dati non può essere cancellato perché richiesto da uno o più moduli.
