--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl_BE.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Cancel field changes? (Automatic Copy)
 cancel-without-saving=Annuleren zonder op te slaan? (Automatic Translation)
 changeable-default-language-description=If checked, the default language of dynamic data mapping structures will be changeable. The default language of dynamic data mapping structures is inherited from the site settings. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Wijzigen van de taal wordt de bestaande sjabloonscript niet automatisch vertalen. Gebruik het palet na het wijzigen van de taal, behalve de eerste. (Automatic Translation)
-checkbox-field-type-description=Answer yes or no questions using a checkbox. (Automatic Copy)
+checkbox-field-type-description=Answer yes or no questions using a checkbox (Automatic Copy)
 checkbox-field-type-label=Boolean Question (Automatic Copy)
-checkbox-multiple-field-type-description=Selecteer meerdere opties door een selectievakje aan te vinken.
+checkbox-multiple-field-type-description=Select multiple options using a checkbox (Automatic Copy)
 checkbox-multiple-field-type-label=Meervoudige selectie
 choose-a-data-provider=Choose a Data Provider (Automatic Copy)
 choose-a-field-to-show-the-result=Choose a Field to Show the Result (Automatic Copy)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Data Provider's Output: (Automatic Copy)
 data-provider-parameter-output-description=Assign the data provider's parameters you want to a field and the information will autofill it automatically. (Automatic Copy)
 data-provider-timeout-message=Enter the time in milliseconds after which the rest service call will be aborted. Its minimum value is 1000 milliseconds. (Automatic Copy)
 data-providers=Data Providers (Automatic Copy)
-date-field-type-description=Select date from a Datepicker. (Automatic Copy)
+date-field-type-description=Select date from a Datepicker (Automatic Copy)
 date-field-type-label=Date (Automatic Copy)
 ddm-data-provider=Dynamic Data Mapping Data Provider (Automatic Copy)
 ddm-data-provider-configuration-name=Data Providers (Automatic Copy)
@@ -98,7 +98,7 @@ dismiss-operation=Dismiss Operation (Automatic Copy)
 displayed-json-attribute=Weergegeven JSON kenmerk (Automatic Translation)
 displaying-form=Formulier weergeven (Automatic Translation)
 do=Do (Automatic Copy)
-document-library-field-type-description=Bestanden verzenden via Documenten en Media.
+document-library-field-type-description=Send files via Documents and Media (Automatic Copy)
 document-library-field-type-label=Uploaden
 does-not-contain=Does not contain (Automatic Copy)
 does-not-match=Does not match (Automatic Copy)
@@ -149,7 +149,7 @@ forms=Forms (Automatic Copy)
 from-autofill=From Autofill (Automatic Copy)
 from-data-provider=From Data Provider (Automatic Copy)
 ftl[stands-for]=FreeMarker (Automatic Copy)
-grid-field-type-description=Selecteer opties van een matrix.
+grid-field-type-description=Select options from a matrix (Automatic Copy)
 grid-field-type-label=Raster
 help-text=Help-tekst (Automatic Translation)
 if=If (Automatic Copy)
@@ -204,7 +204,7 @@ no-forms-were-found=Geen formulieren werden gevonden. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Number (Automatic Copy)
-numeric-field-type-description=Alleen getallen zijn toegestaan.
+numeric-field-type-description=It accepts only numbers (Automatic Copy)
 numeric-field-type-label=Numeriek
 only-allow-deleting-required-fields-in-edit-mode=Verwijderen van velden alleen toestaan in bewerkmodus.
 option=Optie
@@ -212,7 +212,7 @@ options-field-type-label=Opties
 or=OR (Automatic Copy)
 other-field=Other field (Automatic Copy)
 output-parameters=Output Parameters (Automatic Copy)
-paragraph-field-type-description=Add a title and/or a body text in your form. (Automatic Copy)
+paragraph-field-type-description=Add a title and/or a body text in your form (Automatic Copy)
 paragraph-field-type-label=Paragraph (Automatic Copy)
 parameter=Parameter (Automatic Copy)
 parent-x=Bovenliggend {0}
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=De gebruikersnaam 
 publish-form=Formulier publiceren (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Publish the form to get its shareable link. (Automatic Copy)
 publish-this-form=Publish this form. (Automatic Copy)
-radio-field-type-description=Select only one item with a radio button. (Automatic Copy)
+radio-field-type-description=Select only one item with a radio button (Automatic Copy)
 radio-field-type-label=Single Selection (Automatic Copy)
 regular-expression=Regular expression (Automatic Copy)
 remove-field=Remove Field (Automatic Copy)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Opslaan (Automatic Translation)
 script-file=Scriptbestand (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecteer een bestaand formulier of een formulier moet worden weergegeven in deze toepassing toevoegen. (Automatic Translation)
-select-field-type-description=Choose one or more options from a list. (Automatic Copy)
+select-field-type-description=Choose one or more options from a list (Automatic Copy)
 select-field-type-label=Select from List (Automatic Copy)
 select-form=Selecteer formulier (Automatic Translation)
+separator-field-type-description=Add a line to organize your information (Automatic Copy)
+separator-field-type-label=Separator (Automatic Copy)
 show-as-a-switcher=Show as a Switcher (Automatic Copy)
 show-error-message=Show Error Message (Automatic Copy)
 show-more-options=Meer opties weergeven (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Stay (Automatic Copy)
 storage-type=Opslagtype
 stored-json-attribute=Opgeslagen JSON kenmerk (Automatic Translation)
 structure-help=Selecteer een structuur voor het maken van een sjabloon voor die structuur of laat dit veld leeg te maken een algemene sjabloon dat kan worden ingebed in andere sjablonen. (Automatic Translation)
+style=Style (Automatic Copy)
 submit-form=Invoeren
 success-page=Success Page (Automatic Copy)
 sum_function=Sum (Automatic Copy)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Switch Pagination to Bottom (Automatic Copy)
 switch-pagination-to-top=Switch Pagination to Top (Automatic Copy)
 template-key-help=De sjabloon-sleutel kan worden gebruikt om via programmacode onder deze sjabloon een andere sjabloon. (Automatic Translation)
 templates-for-structure-x=Sjablonen voor struktuur: {0}
-text-field-type-description=Single line or multiline text area. (Automatic Copy)
+text-field-type-description=Single line or multiline text area (Automatic Copy)
 text-field-type-label=Text Field (Automatic Copy)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=The autosave interval must be greater than or equal to 0. (Automatic Copy)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=The data provider cannot be deleted because it is required by one or more forms. (Automatic Copy)
