--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Revocați modificările de câmp? (Automatic Trans
 cancel-without-saving=Anula fără salvare? (Automatic Translation)
 changeable-default-language-description=Dacă verificat, limba implicită a structurilor de cartografiere dinamic de date va fi schimbată. Limba implicită a structurilor de cartografiere date dinamice este moştenit de la site-ul setările. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Schimbarea limbii nu traduce automat scriptul de şablon existentă. Pentru a utiliza paleta după schimbarea limbii, salva prima. (Automatic Translation)
-checkbox-field-type-description=Răspunde la întrebări da sau nu, utilizând o casetă de selectare. (Automatic Translation)
+checkbox-field-type-description=Răspuns da sau nu întrebări folosind o casetă de selectare (Automatic Translation)
 checkbox-field-type-label=Întrebare booleană (Automatic Translation)
-checkbox-multiple-field-type-description=Selectaţi opţiuni multiple utilizând o casetă de selectare. (Automatic Translation)
+checkbox-multiple-field-type-description=Selectați mai multe opțiuni utilizând o casetă de selectare (Automatic Translation)
 checkbox-multiple-field-type-label=Selecţie multiplă (Automatic Translation)
 choose-a-data-provider=Alege un furnizor de date (Automatic Translation)
 choose-a-field-to-show-the-result=Alegeţi un câmp pentru a afișa rezultatul (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Furnizor de date de ieşire: (Automatic Translati
 data-provider-parameter-output-description=Atribuiţi furnizor de date parametrii doriţi un câmp şi informaţii va autofill automat. (Automatic Translation)
 data-provider-timeout-message=Intre timp în milisecunde după care restul serviciu apel va fi anulată. Valoarea minim este 1000 milisecunde. (Automatic Translation)
 data-providers=Furnizori de date (Automatic Translation)
-date-field-type-description=Selectaţi data la o Datepicker. (Automatic Translation)
+date-field-type-description=Selectați data de la un DatePicker (Automatic Translation)
 date-field-type-label=Data (Automatic Translation)
 ddm-data-provider=Furnizor de date dinamic date de cartografiere (Automatic Translation)
 ddm-data-provider-configuration-name=Furnizori de date (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Respingerea funcţionarea (Automatic Translation)
 displayed-json-attribute=JSON afişate atributul (Automatic Translation)
 displaying-form=Formularul (Automatic Translation)
 do=Face (Automatic Translation)
-document-library-field-type-description=Trimite fişiere prin intermediul documentelor şi mass-Media. (Automatic Translation)
+document-library-field-type-description=Trimiterea fișierelor prin documente și media (Automatic Translation)
 document-library-field-type-label=Încărcaţi (Automatic Translation)
 does-not-contain=Nu contine (Automatic Translation)
 does-not-match=Nu se potrivesc (Automatic Translation)
@@ -149,7 +149,7 @@ forms=Forme (Automatic Translation)
 from-autofill=La completarea automată (Automatic Translation)
 from-data-provider=La furnizor de date (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
-grid-field-type-description=Selectaţi opţiuni dintr-o matrice. (Automatic Translation)
+grid-field-type-description=Selectați opțiunile dintr-o matrice (Automatic Translation)
 grid-field-type-label=Grilă (Automatic Translation)
 help-text=Textul de ajutor (Automatic Translation)
 if=Dacă (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=Forme nu au fost găsite. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Numărul (Automatic Translation)
-numeric-field-type-description=Se acceptă doar numere. (Automatic Translation)
+numeric-field-type-description=Acesta acceptă numai numere (Automatic Translation)
 numeric-field-type-label=Numerică (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Numai permite ştergerea câmpurile obligatorii în modul de editare. (Automatic Translation)
 option=Opţiune (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Opţiuni (Automatic Translation)
 or=SAU (Automatic Translation)
 other-field=Alt domeniu (Automatic Translation)
 output-parameters=Parametrii de ieşire (Automatic Translation)
-paragraph-field-type-description=Adauga un titlu si/sau un corp text în formular. (Automatic Translation)
+paragraph-field-type-description=Adăugarea unui titlu și/sau a unui corp text în formular (Automatic Translation)
 paragraph-field-type-label=Alin (Automatic Translation)
 parameter=Parametru (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Furnizeze numele d
 publish-form=Publicați formularul (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Publicați formularul pentru a obţine link-ul său partajabile. (Automatic Translation)
 publish-this-form=Publicați acest formular. (Automatic Translation)
-radio-field-type-description=Selectaţi doar un singur articol cu un buton radio. (Automatic Translation)
+radio-field-type-description=Selectarea unui singur element cu un buton radio (Automatic Translation)
 radio-field-type-label=Singură selecţie (Automatic Translation)
 regular-expression=Expresie regulată (Automatic Translation)
 remove-field=Eliminaţi câmpul (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvarea (Automatic Translation)
 script-file=Fişier de script (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selectaţi o machetă existentă sau pentru a adăuga o formă pentru a fi afişate în această aplicaţie. (Automatic Translation)
-select-field-type-description=Selectaţi unul sau mai multe opţiuni dintr-o listă. (Automatic Translation)
+select-field-type-description=Alegeți una sau mai multe opțiuni dintr-o listă (Automatic Translation)
 select-field-type-label=Selectaţi din lista (Automatic Translation)
 select-form=Selectați formularul (Automatic Translation)
+separator-field-type-description=Adăugați o linie pentru a vă organiza informațiile (Automatic Translation)
+separator-field-type-label=Separator (Automatic Translation)
 show-as-a-switcher=Arată ca o nuia a întrerupe (Automatic Translation)
 show-error-message=Afişează un mesaj de eroare (Automatic Translation)
 show-more-options=Arată mai multe optiuni (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Staţi (Automatic Translation)
 storage-type=Tip stocare (Automatic Translation)
 stored-json-attribute=JSON stocate atribut (Automatic Translation)
 structure-help=Selectați o structură pentru a crea un şablon pentru că structura sau lăsaţi acest câmp necompletat pentru a crea un şablon generice, care pot fi încorporate în alte şabloane. (Automatic Translation)
+style=Stil (Automatic Translation)
 submit-form=Trimite
 success-page=Pagina de succes (Automatic Translation)
 sum_function=Suma (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Comutaţi paginare de jos (Automatic Translation)
 switch-pagination-to-top=Comutator paginare în sus (Automatic Translation)
 template-key-help=Tasta de şablon poate fi folosit pentru a include acest şablon programatically într-un alt şablon. (Automatic Translation)
 templates-for-structure-x=Templates for Structure: {0} (Automatic Copy)
-text-field-type-description=Singură linie sau zona de text cu mai multe linii. (Automatic Translation)
+text-field-type-description=Zonă de text cu o singură linie sau multilină (Automatic Translation)
 text-field-type-label=Câmp de text (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=Intervalul de salvare automată trebuie să fie mai mare sau egal cu 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Imposibil de şters furnizorul de date, deoarece este necesar unul sau mai multe formulare. (Automatic Translation)
