--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Ali želite preklicati spremembe polja? (Automatic
 cancel-without-saving=Ali želite preklicati brez shranjevanja? (Automatic Translation)
 changeable-default-language-description=Če je potrjeno, privzeti jezik dinamične podatkovne preslikave strukture bo spremenljivo. Privzeti jezik dinamične podatkovne preslikave strukture je podedovan iz nastavitev mesta. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Spreminjanje jezika ne samodejno prevajanje obstoječi skript predlogo. Rabiti paleti po zamenjavi jezika, razen prve. (Automatic Translation)
-checkbox-field-type-description=Odgovor da ali ne vprašanj, ki uporabljajo polje. (Automatic Translation)
+checkbox-field-type-description=Odgovor da ali brez vprašanj s potrditvenim poljem (Automatic Translation)
 checkbox-field-type-label=Logično vprašanje (Automatic Translation)
-checkbox-multiple-field-type-description=Izberite več predkupna pravica using a čekovna knjižica. (Automatic Translation)
+checkbox-multiple-field-type-description=Izbiranje več možnosti s potrditvenim poljem (Automatic Translation)
 checkbox-multiple-field-type-label=Večkratna izbira (Automatic Translation)
 choose-a-data-provider=Izberite ponudnika podatkov (Automatic Translation)
 choose-a-field-to-show-the-result=Izberite polje, če želite prikazati rezultat (Automatic Translation)
@@ -73,7 +73,7 @@ data-provider-parameter-output=Ponudnik podatkov izhod: (Automatic Translation)
 data-provider-parameter-output-description=Določite parametre ponudnik podatkov želite polje in bo samodejno Vnesi informacije to samodejno. (Automatic Translation)
 data-provider-timeout-message=Vnesite čas v milisekundah, po katerem bo prekinjeno ostalo storitev klic. Najmanjša vrednost je 1000 milisekund. (Automatic Translation)
 data-providers=Ponudniki podatkov (Automatic Translation)
-date-field-type-description=Izberite datum na izbirnik datuma. (Automatic Translation)
+date-field-type-description=Izberite datum iz DatePicker (Automatic Translation)
 date-field-type-label=Datum (Automatic Translation)
 ddm-data-provider=Ponudnik podatkov kartiranje dinamičnih podatkov (Automatic Translation)
 ddm-data-provider-configuration-name=Ponudniki podatkov (Automatic Translation)
@@ -98,7 +98,7 @@ dismiss-operation=Zavrne delovanje (Automatic Translation)
 displayed-json-attribute=Prikazano JSON atribut (Automatic Translation)
 displaying-form=Prikazovanje obrazec (Automatic Translation)
 do=Ali (Automatic Translation)
-document-library-field-type-description=Pošiljanje datotek preko dokumentov in medijev. (Automatic Translation)
+document-library-field-type-description=Pošiljanje datotek prek dokumentov in predstavnosti (Automatic Translation)
 document-library-field-type-label=Upload (Automatic Translation)
 does-not-contain=Ne vsebuje (Automatic Translation)
 does-not-match=Se ne ujema (Automatic Translation)
@@ -149,7 +149,7 @@ forms=Oblike (Automatic Translation)
 from-autofill=Iz samodejnega izpolnjevanja (Automatic Translation)
 from-data-provider=Ponudnika podatkov (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
-grid-field-type-description=Izberite možnosti iz matrike. (Automatic Translation)
+grid-field-type-description=Izberite možnosti iz matrike (Automatic Translation)
 grid-field-type-label=Mreža (Automatic Translation)
 help-text=Besedilo pomoči (Automatic Translation)
 if=Če (Automatic Translation)
@@ -204,7 +204,7 @@ no-forms-were-found=Obrazcev ni bilo mogoče najti. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
 number-placeholder=Število (Automatic Translation)
-numeric-field-type-description=Sprejema samo številke. (Automatic Translation)
+numeric-field-type-description=Sprejema samo številke (Automatic Translation)
 numeric-field-type-label=Številčno (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Le dopušča brisanja zahtevana polja v načinu urejanja. (Automatic Translation)
 option=Možnost (Automatic Translation)
@@ -212,7 +212,7 @@ options-field-type-label=Možnosti (Automatic Translation)
 or=ALI (Automatic Translation)
 other-field=Drugo polje (Automatic Translation)
 output-parameters=Izhodnih parametrov (Automatic Translation)
-paragraph-field-type-description=Dodajte naslov in/ali telo besedila v obrazcu. (Automatic Translation)
+paragraph-field-type-description=Dodajanje naslova in/ali besedila telesa v obrazcu (Automatic Translation)
 paragraph-field-type-label=Odstavka (Automatic Translation)
 parameter=Parameter (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Zagotavljajo upora
 publish-form=Objaviti obrazec (Automatic Translation)
 publish-the-form-to-get-its-shareable-link=Objaviti obrazec zadobiti svoj Djeljiv povezavo. (Automatic Translation)
 publish-this-form=Objaviti ta obrazec. (Automatic Translation)
-radio-field-type-description=Izberite samo en element z izbirnim gumbom. (Automatic Translation)
+radio-field-type-description=Izberite samo en element z radijskim gumbom (Automatic Translation)
 radio-field-type-label=Izbor enega (Automatic Translation)
 regular-expression=Regularni izraz (Automatic Translation)
 remove-field=Odstrani polje (Automatic Translation)
@@ -256,9 +256,11 @@ saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Varčevanje (Automatic Translation)
 script-file=Skript datoteke (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Izberite obstoječ obrazec ali dodati obrazec, prikazan v tej vlogi. (Automatic Translation)
-select-field-type-description=S seznama izberite eno ali več možnosti. (Automatic Translation)
+select-field-type-description=Izberite eno ali več možnosti s seznama (Automatic Translation)
 select-field-type-label=Izberite iz seznama (Automatic Translation)
 select-form=Izberite obrazec (Automatic Translation)
+separator-field-type-description=Dodajanje vrstice za organiziranje podatkov (Automatic Translation)
+separator-field-type-label=Ločilo (Automatic Translation)
 show-as-a-switcher=Razstava kot a ranžirna lokomotiva (Automatic Translation)
 show-error-message=Pokaži sporočilo o napaki (Automatic Translation)
 show-more-options=Prikaži več možnosti (Automatic Translation)
@@ -275,6 +277,7 @@ stay=Bivanja (Automatic Translation)
 storage-type=Vrsta pomnilnika (Automatic Translation)
 stored-json-attribute=Shranjene JSON atribut (Automatic Translation)
 structure-help=Izberite strukturo za ustvarjanje predloge za to strukturo ali pustite to polje prazno za ustvarjanje splošne predloge, ki lahko vgrajeni v druge predloge. (Automatic Translation)
+style=Slog (Automatic Translation)
 submit-form=Pošlji
 success-page=Uspeh strani (Automatic Translation)
 sum_function=Vsota (Automatic Translation)
@@ -286,7 +289,7 @@ switch-pagination-to-bottom=Preklopite številčenje strani na dnu (Automatic Tr
 switch-pagination-to-top=Stikalo označeno vrh (Automatic Translation)
 template-key-help=Tipko predloga se lahko uporabijo za vsebujejo predlogo programatically v drugo predlogo. (Automatic Translation)
 templates-for-structure-x=Templates for Structure: {0} (Automatic Copy)
-text-field-type-description=Ena vrstica ali območje več vrsticami besedila. (Automatic Translation)
+text-field-type-description=Področje z eno vrstico ali večvrstični tekst (Automatic Translation)
 text-field-type-label=Polje z besedilom (Automatic Translation)
 the-autosave-interval-must-be-greater-than-or-equal-to-0=Interval samodejnega shranjevanja mora biti večji ali enak 0. (Automatic Translation)
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=Ponudnik podatkov ni mogoče izbrisati, ker to zahteva ena ali več oblik. (Automatic Translation)
